--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 %% Document-wide settings.
-\documentclass[letterpaper]{report}
+\documentclass[letterpaper]{article}
 \title{Document title}
 \author{Thomas HOULLIER} 
 
@@ -76,8 +76,8 @@
 \appto\normalsize{\belowdisplayshortskip=\belowdisplayskip}
 
 % Glossaries
-\makeglossaries
-\loadglsentries{glossary/glossary.tex}
+%\makeglossaries
+%\loadglsentries{glossary/glossary.tex}
 
 % Rewrite month codes in bibliography
 \DeclareSourcemap{
@@ -105,6 +105,16 @@
 % Allow an extra pass to fix overfull hboxes by allowing more whitespace.
 \emergencystretch=1em
 
+% Page numbering
+\usepackage{fancyhdr}
+\usepackage{lastpage}
+\fancypagestyle{plain}{
+\fancyhf{} % Clear footer.
+\rfoot{\thepage \hspace{1pt} of \pageref*{LastPage}}
+\renewcommand{\headrulewidth}{0pt} % Remove rule at top of page
+}
+
+% Document
 \begin{document}
 \frenchspacing
 \maketitle
