added keywords and abstract

--- a/main.tex
+++ b/main.tex
@@ -125,11 +125,21 @@
 % Version history
 \usepackage{vhistory}
 
+% Keywords
+\providecommand{\keywords}[1]{\textbf{Keywords --} #1}
+
 % Document
 \begin{document}
 \frenchspacing
 \date{v1.0 -- \today}
 \maketitle
+
+\begin{abstract}
+We provide a LaTeX article template. It is meant for scientific writing in
+article format.
+\end{abstract}
+
+\keywords{LaTeX, Documentation, Article, Technical writing.}
 
 \begin{versionhistory}
 \vhEntry{1.0}{\today}{TH}{creation}
