--- a/preamble.tex
+++ b/preamble.tex
@@ -113,3 +113,7 @@
 
 % Keywords
 \providecommand{\keywords}[1]{\textbf{Keywords --} #1}
+
+% Glossary
+\makeglossaries
+\loadglsentries{glossary/glossary.tex}
