added example image, automatic centering of figures

--- a/biblio.bib
+++ b/biblio.bib
@@ -12,3 +12,10 @@
   volume    = {820},
   doi       = {10.3847/0004-637x/820/2/136},
   publisher = {American Astronomical Society}}
+
+@Online{inkscape,
+  author = {Inkscape Project},
+  title = {Inkscape website},
+  url = {https://inkscape.org/},
+  urldate = {2022-07-17}
+}
