--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@ article format.
 \printglossary[type=\acronymtype,style=index]
 \thispagestyle{FirstPage}
 \pagestyle{plain}
-\include{chapters/chapter1}
+\include{sections/examples}
 
 \appendix
 \cleardoublepage
