added tables, epigraphs, footnotes, icons etc

--- a/biblio.bib
+++ b/biblio.bib
@@ -17,5 +17,40 @@
   author = {Inkscape Project},
   title = {Inkscape website},
   url = {https://inkscape.org/},
+  urldate = {2022-07-17}}
+
+@Online{gnuplot,
+  title = {Gnuplot homepage},
+  url = {http://www.gnuplot.info/},
+  urldate = {2022-07-17}}
+
+@software{thomashoullier/alarm-clock,
+  author = {Houllier, Thomas},
+  license = {CC-BY-4.0},
+  month = {7},
+  title = {{CAD modeling of an alarm clock using FreeCAD.}},
+  url = {https://github.com/thomashoullier/alarm_clock},
+  year = {2022}}
+
+@Online{equationsheet,
+  title = "Equation sheet",
+  url = {https://www.equationsheet.com/},
+  urldate = {2022-07-17}}
+
+@Online{SO-latex-equations,
+  title = {A collection of LaTeX equations?},
+  url = {https://tex.stackexchange.com/q/119272/215752},
+  urldate = {2022-07-17}}
+
+@software{tjko/jpegoptim,
+  author = {Kokkonen, Timo},
+  license = {GPL-3.0},
+  title = {jpegoptim},
+  url = {https://github.com/tjko/jpegoptim}}
+
+@software{fontawesome-latex,
+  license = {LaTeX},
+  title = {fontawesome},
+  url = {https://ctan.org/pkg/fontawesome?lang=en},
   urldate = {2022-07-17}
 }
