--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -1,2 +1,4 @@
 \newacronym{RBF}{RBF}{Radial Basis Function}
 \newacronym{svg}{SVG}{Scalable Vector Graphics}
+\newacronym{jpg}{JPG}{Joint Photographic Experts Group}
+\newacronym{png}{PNG}{Portable Network Graphics}
