--- a/main.tex
+++ b/main.tex
@@ -28,12 +28,14 @@ article format.
 \begin{versionhistory}
 \vhEntry{1.0}{\today}{TH}{creation}
 \end{versionhistory}
+\setcounter{table}{0} % Reset the table counter.
 
 \tableofcontents
 \printglossary[type=\acronymtype,style=index]
 \thispagestyle{FirstPage}
 \pagestyle{plain}
 \include{sections/examples}
+\include{sections/usage}
 
 \appendix
 \cleardoublepage
