--- a/preamble.tex
+++ b/preamble.tex
@@ -2,7 +2,7 @@
 \usepackage{amsmath} % For cases in equations.
 \usepackage{amsfonts} % For maths sets.
 \usepackage{physics} % For \abs{} and \norm{}.
-\usepackage{svg} %svg graphics
+\usepackage[inkscapelatex=false]{svg} %svg graphics
 \usepackage{siunitx} % units formatting
 
 \usepackage[backend=biber,style=numeric,citestyle=numeric-comp,maxcitenames=99,dateabbrev=false]{biblatex}
@@ -125,3 +125,5 @@
 % Glossary
 \makeglossaries
 \loadglsentries{glossary/glossary.tex}
+
+\usepackage{fontawesome}
