--- a/biblio.bib
+++ b/biblio.bib
@@ -52,5 +52,11 @@
   license = {LaTeX},
   title = {fontawesome},
   url = {https://ctan.org/pkg/fontawesome?lang=en},
-  urldate = {2022-07-17}
-}
+  urldate = {2022-07-17}}
+
+@misc{enwiki:euclid-algorithm,
+    author = "{Wikipedia contributors}",
+    title = "Euclidean algorithm --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2022",
+    url = "https://en.wikipedia.org/w/index.php?title=Euclidean_algorithm&oldid=1098314618",
+    note = "[Online; accessed 17-July-2022]"}
