--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -2,3 +2,4 @@
 \newacronym{svg}{SVG}{Scalable Vector Graphics}
 \newacronym{jpg}{JPG}{Joint Photographic Experts Group}
 \newacronym{png}{PNG}{Portable Network Graphics}
+\newacronym{GCD}{GCD}{Greatest Common Divisor}
