--- a/preamble.tex
+++ b/preamble.tex
@@ -23,7 +23,7 @@
   \mkbibmonth{\thefield{urlmonth}}\addspace%
   \thefield{urlyear}\isdot}
 \usepackage[ruled,vlined]{algorithm2e} % Algorithms.
-\usepackage{algorithmic}
+\DontPrintSemicolon
 \usepackage{mathtools} % Ceiling function.
 \usepackage{outlines} % Nest lists.
 \usepackage{interval} % Writing intervals.
