minor: todo item

--- a/sections/examples.tex
+++ b/sections/examples.tex
@@ -141,6 +141,7 @@ $Y \gets B$\;
 \end{algorithm}
 
 \subsection{Inline code and Blocks of code}
+% TODO: See https://www.overleaf.com/learn/latex/Code_listing
 
 \subsection{Footnotes}
 Footnotes may be included in this fashion\footnote{Hello}.
