added examples of code listings

--- a/biblio.bib
+++ b/biblio.bib
@@ -60,3 +60,13 @@
     year = "2022",
     url = "https://en.wikipedia.org/w/index.php?title=Euclidean_algorithm&oldid=1098314618",
     note = "[Online; accessed 17-July-2022]"}
+
+@misc{numpy-hfft,
+  title = "numpy.fft.hfft",
+  url = {https://numpy.org/doc/stable/reference/generated/numpy.fft.hfft.html},
+  urldate = {2022-07-18}}
+
+@misc{octave-special-matrices,
+  title = "Octave -- Special utility matrices",
+  url = {https://docs.octave.org/latest/Special-Utility-Matrices.html},
+  urldate = {2022-07-18}}
