--- a/preamble.tex
+++ b/preamble.tex
@@ -43,18 +43,6 @@
 \usepackage[acronym,nonumberlist,nogroupskip,nopostdot]{glossaries} % Glossary for acronyms.
 \renewcommand*{\glstextformat}[1]{\textcolor{black}{#1}} % No color on links for abbrev.
 
-\usepackage[capitalise,nameinlink]{cleveref} % Include eg. "Fig." in front of figures.
-\crefname{algorithm}{Alg.}{Algs.}
-\crefname{table}{Tab.}{Tabs.}
-\crefname{equation}{Eq}{Eqs.}
-% Equation cross-references.
-%\creflabelformat{equation}{#2#1#3}
-\crefformat{equation}{(#2Eq.\thinspace#1#3)}
-
-% No parentheses in equation labels.
-%\newtagform{noparen}{}{}
-%\usetagform{noparen}
-
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil} % Ceiling function.
 \DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor} % Floor function.
 
@@ -126,4 +114,18 @@
 \makeglossaries
 \loadglsentries{glossary/glossary.tex}
 
-\usepackage{fontawesome}
+\usepackage{fontawesome} %inline icons
+\usepackage{listings} % Code listings
+
+\usepackage[capitalise,nameinlink]{cleveref} % Include eg. "Fig." in front of figures.
+\crefname{algorithm}{Alg.}{Algs.}
+\crefname{table}{Tab.}{Tabs.}
+\crefname{equation}{Eq}{Eqs.}
+% Equation cross-references.
+%\creflabelformat{equation}{#2#1#3}
+\crefformat{equation}{(#2Eq.\thinspace#1#3)}
+
+% No parentheses in equation labels.
+%\newtagform{noparen}{}{}
+%\usetagform{noparen}
+
