customized code blocks style

--- a/biblio.bib
+++ b/biblio.bib
@@ -66,7 +66,7 @@
   url = {https://numpy.org/doc/stable/reference/generated/numpy.fft.hfft.html},
   urldate = {2022-07-18}}
 
-@misc{octave-special-matrices,
-  title = "Octave -- Special utility matrices",
-  url = {https://docs.octave.org/latest/Special-Utility-Matrices.html},
+@misc{octave-example,
+  title = "Octave -- Example Code",
+  url = {https://docs.octave.org/v7.1.0/Example-Code.html},
   urldate = {2022-07-18}}
