--- a/preamble.tex
+++ b/preamble.tex
@@ -115,7 +115,29 @@
 \loadglsentries{glossary/glossary.tex}
 
 \usepackage{fontawesome} %inline icons
+\usepackage{xcolor}
 \usepackage{listings} % Code listings
+\definecolor{codeback}{rgb}{0.99,0.99,0.98}
+\definecolor{codecomment}{HTML}{0588fc}
+\definecolor{codekeyword}{HTML}{af5f00}
+\definecolor{codestring}{HTML}{ffa07a}
+\lstdefinestyle{mystyle}{
+  backgroundcolor=\color{codeback},
+  commentstyle=\color{codecomment},
+  keywordstyle=\color{codekeyword},
+  stringstyle=\color{codestring},
+  basicstyle=\ttfamily\footnotesize,
+  breakatwhitespace=false,         
+  breaklines=true,                 
+  captionpos=b,                    
+  keepspaces=true,                 
+  numbers=left,                    
+  numbersep=5pt,                  
+  showspaces=false,                
+  showstringspaces=false,
+  showtabs=false,                  
+  tabsize=2}
+\lstset{style=mystyle}
 
 \usepackage[capitalise,nameinlink]{cleveref} % Include eg. "Fig." in front of figures.
 \crefname{algorithm}{Alg.}{Algs.}
