minor: inline listings custom

--- a/sections/examples.tex
+++ b/sections/examples.tex
@@ -141,7 +141,7 @@ $Y \gets B$\;
 \end{algorithm}
 
 \subsection{Inline code and Blocks of code}
-Inline code: \lstinline{cat /etc/group}. Blocks of code are
+Inline code: \lstinline[style=mystyle,language=sh]{cat /etc/group}. Blocks of code are
 \cref{lst:python,lst:octave}.
 
 \begin{lstlisting}[language=Python,
