input instead of include for sections with no pagebreaks

--- a/main.tex
+++ b/main.tex
@@ -34,8 +34,8 @@ article format.
 \printglossary[type=\acronymtype,style=index]
 \thispagestyle{FirstPage}
 \pagestyle{plain}
-\include{sections/examples}
-\include{sections/usage}
+\input{sections/examples}
+\input{sections/usage}
 
 \appendix
 \cleardoublepage
