added a common lisp listings example

--- a/biblio.bib
+++ b/biblio.bib
@@ -70,3 +70,8 @@
   title = "Octave -- Example Code",
   url = {https://docs.octave.org/v7.1.0/Example-Code.html},
   urldate = {2022-07-18}}
+
+@misc{common-lisp-example,
+  title = "Entropy - Rosetta Code",
+  url = {https://rosettacode.org/wiki/Entropy#Common_Lisp},
+  urldate = {2022-07-20}}
