--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
             hyperfootnotes=false,
             pdfauthor={Thomas HOULLIER},
             pdftitle={Latex article template},
-	    pdfkeywords={<keywords>}]
+	    pdfkeywords={LaTeX, Documentation, Article, Technical writing}]
             {hyperref} % Links for ref/cite.
 
 \input{preamble}
