added Eratosthenes sieve example

--- a/preamble.tex
+++ b/preamble.tex
@@ -24,6 +24,7 @@
   \thefield{urlyear}\isdot}
 \usepackage[ruled,vlined]{algorithm2e} % Algorithms.
 \DontPrintSemicolon
+\SetKwInOut{Input}{Input}\SetKwInOut{Output}{Output}
 \usepackage{mathtools} % Ceiling function.
 \usepackage{outlines} % Nest lists.
 \usepackage{interval} % Writing intervals.
