--- a/biblio.bib
+++ b/biblio.bib
@@ -75,3 +75,10 @@
   title = "Entropy - Rosetta Code",
   url = {https://rosettacode.org/wiki/Entropy#Common_Lisp},
   urldate = {2022-07-20}}
+
+@misc{enwiki:eratosthenes-sieve,
+    author = "{Wikipedia contributors}",
+    title = "Sieve of Eratosthenes --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2022",
+    url = "https://en.wikipedia.org/w/index.php?title=Sieve_of_Eratosthenes&oldid=1093510438",
+    note = "[Online; accessed 20-July-2022]"}
