added final algorithm example

--- a/biblio.bib
+++ b/biblio.bib
@@ -77,8 +77,14 @@
   urldate = {2022-07-20}}
 
 @misc{enwiki:eratosthenes-sieve,
-    author = "{Wikipedia contributors}",
-    title = "Sieve of Eratosthenes --- {Wikipedia}{,} The Free Encyclopedia",
-    year = "2022",
-    url = "https://en.wikipedia.org/w/index.php?title=Sieve_of_Eratosthenes&oldid=1093510438",
-    note = "[Online; accessed 20-July-2022]"}
+  author = "{Wikipedia contributors}",
+  title = "Sieve of Eratosthenes --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2022",
+  url = "https://en.wikipedia.org/w/index.php?title=Sieve_of_Eratosthenes&oldid=1093510438",
+  note = "[Online; accessed 20-July-2022]"}
+
+@software{algorithm2e,
+  license = {LaTeX},
+  title = {algorithm2e},
+  url = {https://ctan.org/pkg/algorithm2e},
+  urldate = {2022-07-20}}
