added a reference to the CTAN package used for each feature showcased

--- a/biblio.bib
+++ b/biblio.bib
@@ -88,3 +88,45 @@
   title = {algorithm2e},
   url = {https://ctan.org/pkg/algorithm2e},
   urldate = {2022-07-20}}
+
+@software{biblatex,
+  license = {LaTeX},
+  title = {BibLaTeX},
+  url = {https://ctan.org/pkg/biblatex?lang=en},
+  urldate = {2022-07-21}}
+
+@software{glossaries,
+  license = {LaTeX},
+  title = {glossaries},
+  url = {https://ctan.org/pkg/glossaries?lang=en},
+  urldate = {2022-07-21}}
+
+@software{svg,
+  license = {LaTeX},
+  title = {svg},
+  url = {https://ctan.org/pkg/svg?lang=en},
+  urldate = {2022-07-21}}
+
+@software{algorithm2e,
+  license = {LaTeX},
+  title = {algorithm2e},
+  url = {https://ctan.org/pkg/algorithm2e?lang=en},
+  urldate = {2022-07-21}}
+
+@software{listings,
+  license = {LaTeX},
+  title = {listings},
+  url = {https://ctan.org/pkg/listings?lang=en},
+  urldate = {2022-07-21}}
+
+@software{epigraph,
+  license = {LaTeX},
+  title = {epigraph},
+  url = {https://ctan.org/pkg/epigraph?lang=en},
+  urldate = {2022-07-21}}
+
+@software{cleveref,
+  license = {LaTeX},
+  title = {cleveref},
+  url = {https://www.ctan.org/pkg/cleveref},
+  urldate = {2022-07-21}}
