forgot the vhistory package

--- a/biblio.bib
+++ b/biblio.bib
@@ -130,3 +130,10 @@
   title = {cleveref},
   url = {https://www.ctan.org/pkg/cleveref},
   urldate = {2022-07-21}}
+
+@software{vhistory,
+  license = {LaTeX},
+  title = {vhistory},
+  url = {https://ctan.org/pkg/vhistory?lang=en},
+  urldate = {2022-07-21}}
+
