--- a/sections/examples.tex
+++ b/sections/examples.tex
@@ -290,3 +290,6 @@ cases of cross-referencing to check how they look.
   \item List: \cref{lst:octave,lst:python,lst:common-lisp}
 \end{itemize} \end{itemize}
 
+\subsection{Revision history}
+The revision history at the beginning of this document is created using
+\lstinline{vhistory} \cite{vhistory}.
