added references and usage notes

--- a/biblio.bib
+++ b/biblio.bib
@@ -137,3 +137,17 @@
   url = {https://ctan.org/pkg/vhistory?lang=en},
   urldate = {2022-07-21}}
 
+@misc{overleaf,
+  title = {Overleaf documentation},
+  urldate = {2022-07-21},
+  url = {https://www.overleaf.com/learn}}
+
+@misc{optica-author-resources,
+  title = {Style Guides and Templates for Optica Publishing Group Journals},
+  url = {https://opg.optica.org/submit/templates/default.cfm},
+  urldate = {2022-07-21}}
+
+@misc{texlive,
+  title = {TeX Live},
+  url = {https://www.tug.org/texlive/},
+  urldate = {2022-07-21}}
