--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -3,3 +3,4 @@
 \newacronym{jpg}{JPG}{Joint Photographic Experts Group}
 \newacronym{png}{PNG}{Portable Network Graphics}
 \newacronym{GCD}{GCD}{Greatest Common Divisor}
+\newacronym{PDF}{PDF}{Portable Document Format}
