--- a/sections/usage.tex
+++ b/sections/usage.tex
@@ -1,2 +1,18 @@
 \section{Usage}
-We detail how a PDF of the present template may be generated.
+Make sure you have a functioning LaTeX installation. We use \lstinline{TeX Live}
+\cite{texlive}. Our target is \gls{PDF} output.
+
+A \lstinline{latexmkrc} file provides the boilerplate code to produce the
+required output, by simply running \lstinline{latexmk -pdf main.tex}.
+
+\section{See also}
+Further LaTeX template ideas and examples may be found in the following
+references.
+
+\begin{itemize}
+\item The Overleaf documentation \cite{overleaf} has many high-quality
+      pages about general LaTeX knowledge.
+\item Scientific journals provide their LaTeX template for submissions,
+      see for instance Optica \cite{optica-author-resources}. Inspiration
+      may be drawn from these sources.
+\end{itemize}
